WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316368
[JSC][Temporal] `PlainDate` add/subtract with a huge day count fails a day-range assertion
https://bugs.webkit.org/show_bug.cgi?id=316368
Summary
[JSC][Temporal] `PlainDate` add/subtract with a huge day count fails a day-ra...
Sosuke Suzuki
Reported
2026-06-04 20:07:39 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-06-04 20:08:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66510
EWS
Comment 2
2026-06-04 21:41:04 PDT
Committed
314613@main
(2c290815d421): <
https://commits.webkit.org/314613@main
> Reviewed commits have been landed. Closing PR #66510 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-04 21:42:12 PDT
<
rdar://problem/178786730
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug